# fastapi-template

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  common.sh  git-tag-version.sh  pyproject.toml  run.sh  test-routes.sh  test.sh
.github/: dependabot.yml
.github/workflows/: black.yml  isort.yml  pytest.yml  python.yml  ruff.yml
app/: admin.py  main.py  models.py  routes.py  version.py
tests/: test_main.py  test_routes.py
