[tool.poetry]
name = "fastapi-example"
version = "1.4.1"
description = "FastAPI project template and example."
authors = ["Akseli Lukkarila <akseli.lukkarila@nitor.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
fastapi = { version = "^0.115.10", extras = ["all"] }
mangum = "^0.19.0"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
coverage = "^7.6.12"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 120
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''venv*'''

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
include = ["*.py", "*.pyi", "**/pyproject.toml"]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
ignore = []
per-file-ignores = {}
# https://docs.astral.sh/ruff/rules/
select = ["E4", "E7", "E9", "F", "W", "N", "UP", "I"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv*",
]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#isort
combine-as-imports = true
lines-between-types = 1
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
# profile = "black"
# manually specifying black compatibility to override line length
combine_as_imports = true
ensure_newline_before_comments = true
extend_skip = [".idea", ".vscode", ".venv", "venv"]
extend_skip_glob = ["venv*"]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
py_version = 311
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true
