[project]
name = "fastapi-example"
version = "1.5.0"
description = "FastAPI project template and example."
authors = [{ name = "Akseli Lukkarila", email = "akseli.lukkarila@nitor.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "click>=8.3.0",
    "fastapi[all]>=0.121.3",
    "mangum>=0.19.0",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]

[project.scripts]
start = "app.main:start"

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "httpx>=0.28.1",
    "coverage>=7.11.0",
    "pytest-cov>=7.0.0",
]
dev = ["ruff>=0.14.2"]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
include = ["*.py", "*.pyi", "**/pyproject.toml"]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
ignore = []
per-file-ignores = {}
# https://docs.astral.sh/ruff/rules/
select = ["E4", "E7", "E9", "F", "W", "N", "UP", "I"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv*",
]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#isort
combine-as-imports = true
lines-between-types = 1
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
